--- a/index.html
+++ b/index.html
@@ -318,41 +318,6 @@
         </div>
     </div>
 
+    <script src="js/modal.js"></script>
 </body>
-
 </html>
-<script>
-
-    // MODAL 
-    function iniciaModal (modalID) { //função que chama o modal com parametro do id do modal
-        const modal = document.getElementById (modalID); // pegue o elemento modalID
-        modal.classList.add('mostrar');
-        modal.addEventListener('click', (event) => {
-            if(event.target.id == modalID || event.target.className == 'fechar'){
-                modal.classList.remove ('mostrar');
-            }
-        })
-    }
-
-    // login
-    const logar_menu = document.getElementById ('login_acesso'); 
-    const logar_rodape = document.getElementById ('login_rodape');
-    logar_menu.addEventListener('click', function() {
-        iniciaModal ('modal-login') 
-    })
-    logar_rodape.addEventListener('click', function() {
-        iniciaModal ('modal-login')
-    })
-    
-    // cadastro
-    const cadastrar_menu = document.getElementById ('cadastrar_acesso');
-    const cadastrar_rodape = document.getElementById ('cadastro_rodape');
-    cadastrar_menu.addEventListener ('click', function() {
-        iniciaModal ('modal-cadastro')
-    })
-    cadastrar_rodape.addEventListener ('click', function() {
-        iniciaModal ('modal-cadastro')
-    })
-
-
-</script>
