pagina obras em processo

--- a/html/obras.html
+++ b/html/obras.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Nothing+You+Could+Do&display=swap"
         rel="stylesheet">
 </head>
+
 <body>
     <header>
         <!--BARRA DE MENU-->
@@ -44,8 +46,53 @@
         </div>
     </header>
 
+    <!--BANNER-->
     <main>
+        <section class="title">
+            <div class="text flex">
+                <h2>Obras</h2>
+            </div>
+        </section>
 
+        <!--PERIODOS ARTE-->
+        <section class="periodos-artisticos">
+            <div class="container">
+                <ul>
+                    <li class="mov-card">
+                        <div class="mov-foto">
+                            <img src="../img/paintings/botticelli-nascimento-venus.jpg" alt="">
+                            <div class="mov-nome">
+                                <h3>Arte Clássica</h3>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="mov-card">
+                        <div class="mov-foto">
+                            <img src="../img/paintings/gogh-amendoeira-em-flor.jpg" alt="">
+                            <div class="mov-nome">
+                                <h3>Arte Medieval</h3>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="mov-card">
+                        <div class="mov-foto">
+                            <img src="../img/paintings/gogh-starry-night.jpg" alt="">
+                            <div class="mov-nome">
+                                <h3>Arte Moderna</h3>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="mov-card">
+                        <div class="mov-foto">
+                            <img src="../img/paintings/picasso-guernica.jpg" alt="">
+                            <div class="mov-nome">
+                                <h3>Arte Contemporânea</h3>
+                            </div>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </section>
     </main>
 
     <!--RODAPÉ-->
@@ -180,6 +227,7 @@
     </div>
 
     <script src="../js/modal.js"></script>
-    
+
 </body>
+
 </html>
