--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <header>
         <!--BARRA DE MENU-->
-        <div class="cabecalho">
+        <div>
             <div class="menu">
                 <div class="container">
                     <div class="logo">
