--- a/html/obras.html
+++ b/html/obras.html
@@ -48,9 +48,10 @@
 
     <!--BANNER-->
     <main>
+
         <section class="title">
             <div class="text flex">
-                <h2>Obras</h2>
+                <h2>Conheça as maiores obras de todos os tempos em um só lugar</h2>
             </div>
         </section>
 
@@ -60,7 +61,7 @@
                 <ul>
                     <li class="mov-card">
                         <div class="mov-foto">
-                            <img src="../img/paintings/botticelli-nascimento-venus.jpg" alt="">
+                            <img src="../img/paintings/grego-aquiles-ajax-jogando-damas.jpg" alt="">
                             <div class="mov-nome">
                                 <h3>Arte Clássica</h3>
                             </div>
@@ -68,7 +69,7 @@
                     </li>
                     <li class="mov-card">
                         <div class="mov-foto">
-                            <img src="../img/paintings/gogh-amendoeira-em-flor.jpg" alt="">
+                            <img src="../img/paintings/duccio-maesta.jpg" alt="">
                             <div class="mov-nome">
                                 <h3>Arte Medieval</h3>
                             </div>
@@ -76,7 +77,7 @@
                     </li>
                     <li class="mov-card">
                         <div class="mov-foto">
-                            <img src="../img/paintings/gogh-starry-night.jpg" alt="">
+                            <img src="../img/paintings/michelangelo-criacao-adao.jpg" alt="">
                             <div class="mov-nome">
                                 <h3>Arte Moderna</h3>
                             </div>
