--- a/html/artistas.html
+++ b/html/artistas.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/global.css">
+    <link rel="stylesheet" href="../css/artistas.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Nothing+You+Could+Do&display=swap"
         rel="stylesheet">
     <title>Document</title>
@@ -43,8 +44,59 @@
         </div>
     </header>
 
+    <!--BANNER-->
     <main>
 
+        <section class="title">
+            <div class="text flex">
+                <h2>Conheça os maiores artistas de todos os tempos em um só lugar</h2>
+            </div>
+        </section>
+
+        <!--BUSCA-->
+
+        <section>
+            <div class="container">
+                <div class="search">
+                    <input type="text" class="busca" placeholder="Buscar">
+                    <button class="busca-botao">
+                        <img src="../img/search.png" alt="">
+                    </button>
+                </div>
+            </div>
+        </section>
+
+        <!--ARTE POR PERIODO-->
+        <section class="periodos-artisticos">
+            <div class="container">
+                <ul>
+                    <li class="mov-card">
+                        <div class="mov-foto">
+                            <img src="../img/paintings/gogh-auto-retrato.jpg" alt="">
+                            <div class="mov-nome">
+                                <h3>Top Artistas</h3>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="mov-card">
+                        <div class="mov-foto">
+                            <img src="../img/paintings/susano-correia.jpg" alt="">
+                            <div class="mov-nome">
+                                <h3>Artistas Revelação</h3>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="mov-card">
+                        <div class="mov-foto">
+                            <img src="../img/paintings/tarsila-do-amaral.jpg" alt="">
+                            <div class="mov-nome">
+                                <h3>Artistas Nacionais</h3>
+                            </div>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </section>
     </main>
 
     <!--RODAPÉ-->
