--- a/html/obras.html
+++ b/html/obras.html
@@ -51,11 +51,24 @@
 
         <section class="title">
             <div class="text flex">
-                <h2>Conheça as maiores obras de todos os tempos em um só lugar</h2>
+                <h2>Explore as maiores obras de todos os tempos em um só lugar</h2>
             </div>
         </section>
 
-        <!--PERIODOS ARTE-->
+        <!--BUSCA-->
+
+        <section>
+            <div class="container">
+                <div class="search">
+                    <input type="text" class="busca" placeholder="Buscar">
+                    <button class="busca-botao">
+                        <img src="../img/search.png" alt="">
+                    </button>
+                </div>
+            </div>
+        </section>
+
+        <!--ARTE POR PERIODO-->
         <section class="periodos-artisticos">
             <div class="container">
                 <ul>
@@ -218,9 +231,9 @@
                 <div class="border-input"></div>
                 <input type="text" class="input" placeholder="Seu e-mail">
                 <div class="border-input"></div>
-                <input type="text" class="input" placeholder="Crie uma senha">
+                <input type="password" class="input" placeholder="Crie uma senha">
                 <div class="border-input"></div>
-                <input type="text" class="input" placeholder="Confirmar senha">
+                <input type="password" class="input" placeholder="Confirmar senha">
                 <div class="border-input"></div>
                 <button class="enter">CADASTRAR-SE</button>
             </form>
