--- a/html/artistas.html
+++ b/html/artistas.html
@@ -66,9 +66,11 @@
             </div>
         </section>
 
-        <!--ARTE POR PERIODO-->
+        <!--ARTISTAS-->
         <section class="periodos-artisticos">
             <div class="container">
+                <h2>ARTISTAS POR CATEGORIA</h2>
+                <hr>
                 <ul>
                     <li class="mov-card">
                         <div class="mov-foto">
