--- a/html/obras.html
+++ b/html/obras.html
@@ -71,6 +71,8 @@
         <!--ARTE POR PERIODO-->
         <section class="periodos-artisticos">
             <div class="container">
+                <h2>OBRAS POR PERÍODO HISTÓRICO</h2>
+                <hr>
                 <ul>
                     <li class="mov-card">
                         <div class="mov-foto">
@@ -82,7 +84,7 @@
                     </li>
                     <li class="mov-card">
                         <div class="mov-foto">
-                            <img src="../img/paintings/duccio-maesta.jpg" alt="">
+                            <img src="../img/paintings/melozzo-da-forli-anjo.jpg" alt="">
                             <div class="mov-nome">
                                 <h3>Arte Medieval</h3>
                             </div>
@@ -90,7 +92,7 @@
                     </li>
                     <li class="mov-card">
                         <div class="mov-foto">
-                            <img src="../img/paintings/michelangelo-criacao-adao.jpg" alt="">
+                            <img src="../img/paintings/munch-the-scream-corte.jpg" alt="">
                             <div class="mov-nome">
                                 <h3>Arte Moderna</h3>
                             </div>
