--- a/html/artistas.html
+++ b/html/artistas.html
@@ -1,21 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <link rel="stylesheet" href="../css/global.css">
     <link rel="stylesheet" href="../css/artistas.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Nothing+You+Could+Do&display=swap"
         rel="stylesheet">
-    <title>Document</title>
+
+    <title>Colorful Art: Artistas</title>
+    <link rel="shortcut icon" href="../img/palette.png">
 </head>
+
 <body>
     <header>
         <!--BARRA DE MENU-->
         <div class="menu">
             <div class="container">
                 <div class="logo">
-                    <h1>Colorful Art</h1>
+                    <a href="../index.html">
+                        <h1>Colorful Art</h1>
+                    </a>
                     <img src="../img/brush.png" alt="">
                 </div>
                 <nav class="links navegacao">
@@ -233,7 +240,8 @@
     </div>
 
     <script src="../js/modal.js"></script>
-    
-    
+
+
 </body>
+
 </html>
