--- a/index.html
+++ b/index.html
@@ -4,11 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Colorful Art</title>
+
     <link rel="stylesheet" href="css/global.css">
     <link rel="stylesheet" href="css/inicio.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Nothing+You+Could+Do&display=swap"
         rel="stylesheet">
+
+    <title>Colorful Art</title>
+    <link rel="shortcut icon" href="img/palette.png">
 </head>
 
 <body>
@@ -18,7 +21,9 @@
             <div class="menu">
                 <div class="container">
                     <div class="logo">
-                        <h1>Colorful Art</h1>
+                        <a href="index.html">
+                            <h1>Colorful Art</h1>
+                        </a>
                         <img src="img/brush.png" alt="">
                     </div>
                     <nav class="links navegacao">
@@ -123,7 +128,7 @@
                     </ul>
                 </div>
                 <h3 class="link-obra">
-                    <a href="">Ver mais obras</a>
+                    <a href="html/obras.html">Ver mais obras</a>
                 </h3>
             </div>
         </section>
@@ -184,7 +189,7 @@
                     </ul>
                 </div>
                 <h3 class="link-artista">
-                    <a href="">Ver mais artistas</a>
+                    <a href="html/artistas.html">Ver mais artistas</a>
                 </h3>
             </div>
         </section>
