--- a/html/obras.html
+++ b/html/obras.html
@@ -4,11 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Colorful Art: Obras</title>
+
     <link rel="stylesheet" href="../css/global.css">
     <link rel="stylesheet" href="../css/obras.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Nothing+You+Could+Do&display=swap"
         rel="stylesheet">
+
+    <title>Colorful Art: Obras</title>
+    <link rel="shortcut icon" href="../img/palette.png">
 </head>
 
 <body>
@@ -17,7 +20,9 @@
         <div class="menu">
             <div class="container">
                 <div class="logo">
-                    <h1>Colorful Art</h1>
+                    <a href="../index.html">
+                        <h1>Colorful Art</h1>
+                    </a>
                     <img src="../img/brush.png" alt="">
                 </div>
                 <nav class="links navegacao">
