--- a/html/artistas.html
+++ b/html/artistas.html
@@ -25,6 +25,16 @@
                     </a>
                     <img src="../img/brush.png" alt="">
                 </div>
+                <div class="menu-mini">
+                    <img src="../img/menu.png" alt="">
+                    <ul class="sub-menu flex">
+                        <li><a href="../index.html">Início</a></li>
+                        <li><a href="obras.html">Obras</a></li>
+                        <li><a href="artistas.html">Artistas</a></li>
+                        <li>Fazer Login</li>
+                        <li>Criar uma conta</li>
+                    </ul>
+                </div>
                 <nav class="links navegacao">
                     <ul>
                         <li>
@@ -230,9 +240,9 @@
                 <div class="border-input"></div>
                 <input type="text" class="input" placeholder="Seu e-mail">
                 <div class="border-input"></div>
-                <input type="text" class="input" placeholder="Crie uma senha">
+                <input type="password" class="input" placeholder="Crie uma senha">
                 <div class="border-input"></div>
-                <input type="text" class="input" placeholder="Confirmar senha">
+                <input type="password" class="input" placeholder="Confirmar senha">
                 <div class="border-input"></div>
                 <button class="enter">CADASTRAR-SE</button>
             </form>
