--- a/html/obras.html
+++ b/html/obras.html
@@ -25,6 +25,16 @@
                     </a>
                     <img src="../img/brush.png" alt="">
                 </div>
+                <div class="menu-mini">
+                    <img src="../img/menu.png" alt="">
+                    <ul class="sub-menu flex">
+                        <li><a href="../index.html">Início</a></li>
+                        <li><a href="obras.html">Obras</a></li>
+                        <li><a href="artistas.html">Artistas</a></li>
+                        <li>Fazer Login</li>
+                        <li>Criar uma conta</li>
+                    </ul>
+                </div>
                 <nav class="links navegacao">
                     <ul>
                         <li>
@@ -112,6 +122,15 @@
                         </div>
                     </li>
                 </ul>
+            </div>
+        </section>
+
+        <section class="divulgacao">
+            <div class="container">
+                <div class="conteudo-divulgacao">
+                    <h2>Gostaria de ver seus trabalhos artísticos publicados na Colorful Art?</h2>
+                    <strong>Faça Login ou Crie sua conta</strong>
+                </div>
             </div>
         </section>
     </main>
