--- a/index.html
+++ b/index.html
@@ -26,6 +26,16 @@
                         </a>
                         <img src="img/brush.png" alt="">
                     </div>
+                    <div class="menu-mini">
+                        <img src="img/menu.png" alt="">
+                        <ul class="sub-menu flex">
+                            <li><a href="index.html">Início</a></li>
+                            <li><a href="html/obras.html">Obras</a></li>
+                            <li><a href="html/artistas.html">Artistas</a></li>
+                            <li><a href="#">Fazer Login</a></li>
+                            <li><a href="#">Criar uma conta</a></li>
+                        </ul>
+                    </div>
                     <nav class="links navegacao">
                         <ul>
                             <li>
@@ -33,6 +43,7 @@
                             </li>
                             <li>
                                 <a href="html/obras.html">Obras</a>
+
                             </li>
                             <li>
                                 <a href="html/artistas.html">Artistas</a>
@@ -115,9 +126,9 @@
                         <li class="art">
                             <div class="art-card">
                                 <div class="art-foto">
-                                    <img src="img/paintings/michelangelo-criacao-adao.jpg" alt="A Criação de Adão">
+                                    <img src="img/paintings/picasso-vieux.jpg" alt="Velho guitarrista cego">
                                     <div class="art-nome">
-                                        <h3>A Criação de Adão</h3>
+                                        <h3>Velho guitarrista cego</h3>
                                     </div>
                                 </div>
                             </div>
