--- a/html/artistas.html
+++ b/html/artistas.html
@@ -118,6 +118,12 @@
         </section>
     </main>
 
+    <!--FRASE-->
+    <div class="frase">
+        <q>A Arte diz o indizível, exprime o inexprimível, traduz o intraduzível.</q>
+        <span>Leonardo Da Vinci</span>
+    </div>
+
     <!--RODAPÉ-->
     <footer>
         <div class="rodape">
@@ -234,7 +240,7 @@
         <div class="modal register">
             <button class="fechar">X</button>
             <h3>Faça parte da comunidade Colorful Art</h3>
-            <img src="../img/paint.png" alt="paleta">
+            <img src="../img/tela.png" alt="paleta">
             <form>
                 <input type="text" class="input" placeholder="Seu nome">
                 <div class="border-input"></div>
