--- a/html/obras.html
+++ b/html/obras.html
@@ -129,7 +129,10 @@
             <div class="container">
                 <div class="conteudo-divulgacao">
                     <h2>Gostaria de ver seus trabalhos artísticos publicados na Colorful Art?</h2>
-                    <strong>Faça Login ou Crie sua conta</strong>
+                    <strong>Faça Login ou Crie sua conta e</strong>
+                    <h3 class="botao-principal">
+                        <a href="#">Saiba mais</a>
+                    </h3>
                 </div>
             </div>
         </section>
@@ -251,7 +254,7 @@
         <div class="modal register">
             <button class="fechar">X</button>
             <h3>Faça parte da comunidade Colorful Art</h3>
-            <img src="../img/paint.png" alt="paleta">
+            <img src="../img/tela.png" alt="paleta">
             <form>
                 <input type="text" class="input" placeholder="Seu nome">
                 <div class="border-input"></div>
