--- a/html/artistas.html
+++ b/html/artistas.html
@@ -86,10 +86,16 @@
         <!--ARTISTAS-->
         <section class="periodos-artisticos">
             <div class="container">
-                <h2>ARTISTAS POR CATEGORIA</h2>
+
+                <h2>
+                    <button class="filtrar-search">
+                        <img src="../img/filter.png" alt="filtrar pesquisa">
+                    </button>
+                    ARTISTAS POR CATEGORIA
+                </h2>
                 <hr>
                 <ul>
-                    <li class="mov-card"  data-anime="left">
+                    <li class="mov-card" data-anime="left">
                         <div class="mov-foto">
                             <img src="../img/paintings/Leonardo-da-Vinci.jpg">
                             <div class="mov-nome">
@@ -246,7 +252,8 @@
                 <div class="border-input"></div>
                 <input type="text" class="input" placeholder="Seu e-mail" id="valida_email" onkeyup="validacao_email()">
                 <div class="border-input" id="mensagem_email"></div>
-                <input type="password" class="input" placeholder="Crie uma senha" id="valida_senha" onkeyup="validacao_senha()">
+                <input type="password" class="input" placeholder="Crie uma senha" id="valida_senha"
+                    onkeyup="validacao_senha()">
                 <div class="border-input" id="mensagem_senha1"></div>
                 <input type="password" class="input" placeholder="Confirmar senha" id="confirma_senha">
                 <div class="border-input" id="mensagem_senha2"></div>
