--- a/html/obras.html
+++ b/html/obras.html
@@ -86,7 +86,12 @@
         <!--ARTE POR PERIODO-->
         <section class="periodos-artisticos">
             <div class="container">
-                <h2>OBRAS POR PERÍODO HISTÓRICO</h2>
+                <h2>
+                    <button class="filtrar-search">
+                        <img src="../img/filter.png" alt="filtrar pesquisa">
+                    </button>
+                    OBRAS POR PERÍODO HISTÓRICO
+                </h2>
                 <hr>
                 <ul>
                     <li class="mov-card" data-anime="left">
