--- a/html/conteudo.html
+++ b/html/conteudo.html
@@ -389,6 +389,7 @@
     <!--MODAL GALERIA PINTURAS-->
 
     <script src="../js/modal.js"></script>
+    <script src="../js/validacao_form.js"></script>
     <script src="../js/animacoes.js"></script>
 </body>
 
