--- a/html/obras.html
+++ b/html/obras.html
@@ -290,6 +290,7 @@
 
 
     <script src="../js/modal.js"></script>
+    <script src="../js/validacao_form.js"></script>
     <script src="../js/animacoes.js"></script>
 
 </body>
