--- a/html/artistas.html
+++ b/html/artistas.html
@@ -266,6 +266,7 @@
     </div>
 
     <script src="../js/modal.js"></script>
+    <script src="../js/validacao_form.js"></script>
     <script src="../js/animacoes.js"></script>
 
 
