melhorias no quiz

--- a/index.html
+++ b/index.html
@@ -250,9 +250,14 @@
                         </div>
                     </div>
                 </div>
+
+                <div id="loading">
+                    <div class="flex">
+                        <img src="img/loading.gif">
+                    </div>
+                </div>
+
             </div>
-
-
         </section>
 
 
