--- a/Projeto-site/conteudo.html
+++ b/Projeto-site/conteudo.html
@@ -40,7 +40,7 @@
                         <input type="text" placeholder="Buscar pintura, escultura, artista...">
                     </div>
                 </div>
-                <nav class="links autenticacao">
+                <nav class="links autenticacao" id="aut_1">
                     <li>
                         <a class="botao" id="login_acesso">Login</a>
                     </li>
