imagem para readme

--- a/Projeto-site/artistas.html
+++ b/Projeto-site/artistas.html
@@ -265,7 +265,7 @@
                 <img src="img/grito-editada.png" alt="">
             </div>
 
-            <form action="http://localhost:3333/users" method="POST" id='form_cad'>
+            <form action="http://localhost:3333/users" method="POST" id='formulario_cad'>
                 <h2>Faça parte da comunidade Colorful Art</h2>
                 <img src="img/tela.png" alt="paleta">
 
